03-kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-app-ingress
  namespace: echo-app
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules: 
  - host: echo-app.cloud.ru
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: echo-app-service
            port:
              number: 80
